Dev/src/LeanData/objects/Reporting_Setting__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Display Fields</fullName>
                </value>
                <value>
                    <fullName>Search Fields</fullName>
                </value>
                <value>
                    <fullName>Task Type</fullName>
                </value>
                <value>
                    <fullName>Event Type</fullName>
                </value>
                <value>
                    <fullName>Campaign Type</fullName>
                </value>
                <value>
                    <fullName>Account Type</fullName>
                </value>
                <value>
                    <fullName>Day Range</fullName>
                </value>
                <value>
                    <fullName>Open Opportunity Stage</fullName>
                </value>
                <value>
                    <fullName>Open Opportunity Type</fullName>
                </value>
                <value>
                    <fullName>Closed Opportunity Stage</fullName>
                </value>
                <value>
                    <fullName>Closed Opportunity Type</fullName>
                </value>
                <value>
                    <fullName>Task Status</fullName>
                </value>
                <value>
                    <fullName>Campaign Member Status</fullName>
                </value>
                <value>
                    <fullName>Exclude Campaign Member Status</fullName>
                </value>
                <value>
                    <fullName>Exclude Lead Status</fullName>
                </value>
                <value>
                    <fullName>Opportunity Created Filter</fullName>
                </value>
                <value>
                    <fullName>Opportunity Closed Filter</fullName>
                </value>
                <value>
                    <fullName>Exclude Opportunity Type</fullName>
                </value>
                <value>
                    <fullName>Exclude Opportunity Stage</fullName>
                </value>
                <value>
                    <fullName>Delete All Bulk Campaigns</fullName>
                </value>
                <value>
                    <fullName>Unchecked Campaigns</fullName>
                </value>
                <value>
                    <fullName>Exclude Campaign Type</fullName>
                </value>
                <value>
                    <fullName>Campaign Type Weighting On</fullName>
                </value>
                <value>
                    <fullName>Campaign Member Status Weighting On</fullName>
                </value>
                <value>
                    <fullName>Campaign Type Weight</fullName>
                </value>
                <value>
                    <fullName>Campaign Member Status Weight</fullName>
                </value>
                <value>
                    <fullName>Query Limit</fullName>
                </value>
                <value>
                    <fullName>Campaign Member Status By Campaign Type Exclusion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Labels_2__c</fullName>
        <label>Labels 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Labels__c</fullName>
        <label>Labels</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organization_Level__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Organization Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Funnel</fullName>
                </value>
                <value>
                    <fullName>Account Scoring</fullName>
                </value>
                <value>
                    <fullName>Account View</fullName>
                </value>
                <value>
                    <fullName>Campaign Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reporting_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value_2__c</fullName>
        <label>Value 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Reporting Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Category__c</columns>
        <columns>Type__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RS-{000000000}</displayFormat>
        <label>Reporting Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reporting Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>